manifest/rdetails-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-virtualservice
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
        subset: v1
